--- a/CSS y diseñowebRes-Gonzalez Kevin/html/retratos.html
+++ b/CSS y diseñowebRes-Gonzalez Kevin/html/retratos.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <p id="titulo">Comenzando con la fotografía</p>
+      <p id="titulo">Retratos</p>
       <nav>
       <ul id="menu">
         <li><a href="../index.html"> Inicio</a></li>
@@ -17,26 +17,40 @@
       </ul>
       </nav>
     </header>
+
+    <section class="galeria">
+      <figure>
+        <img src="../img/retra.jpg" alt="retrato" class="img1">
+        <img src="../img/retra.jpg" alt="retrato" class="img2">
+        <img src="../img/retra.jpg" alt="retrato" class="img3">
+        <img src="../img/retra.jpg" alt="retrato" class="img4">
+        <img src="../img/retra.jpg" alt="retrato" class="img5">
+        <img src="../img/retra.jpg" alt="retrato" class="img6">
+      </figure>
+    </section>
+
+
+
     <footer>
       <section id="footer">
         <ul id="contacto">
-          <p>Contacto</p><br>
+          <p><strong class="pter">Contacto</strong></p><br>
           <li id="mail"><strong>Email:</strong> <a href="mailto:kevinglz@hotmail.com"> kevinglz@hotmail.com</a></li>
           <li id="whats"><strong>Teléfono: +52 1 871 334 4720</strong></li>
           <li id="dire"><strong>Dirección:</strong> Fracc.Latinoamericano Blvd. México #1079</li>
         </ul>
         <article id="Termin">
-          <p> <strong id="pter">Terminos</strong> <br><br>
+          <p> <strong class="pter">Terminos</strong> <br>
           Conoce nuestros terminos <br>y condiciones...</p>
         </article>
         <ul id="redes">
-          <p>Redes Sociales</p><br>
+          <p><strong class="pter">Redes Sociales</strong></p><br>
           <li id="face"><strong>Facebook:</strong> @Kevin Gonzalez Jaquez</li>
           <li id="insta"><strong>Instagram:</strong>@KevinJaquez</li>
           <li id="gma"><strong>Gmail:</strong> kevin.jaq@gmail.com</li>
         </ul>
         <article id="DER">
-          <p> <strong id="pter">Derechos</strong> <br><br>
+        <p> <strong class="pter">Derechos</strong> <br><br>
           @Copyright - 2017</p>
         </article>
       </section>
