--- a/CSS y diseñowebRes-Gonzalez Kevin/index.html
+++ b/CSS y diseñowebRes-Gonzalez Kevin/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <header>
-      <p id="titulo">Comenzando con la fotografía</p>
+      <p id="titulo">Comenzando con la Fotografía</p>
       <nav>
       <ul id="menu">
         <li class="activo"><a href="index.html"> Inicio</a></li>
         <li><a href="html/paisaje.html" >Paisajes</a></li>
         <li><a href="html/retratos.html" >Retratos</a></li>
       </ul>
-      </nav>
+      <nav>
     </header>
     <section id="imagencentral">
       <figure>
@@ -31,23 +31,24 @@
     <footer>
       <section id="footer">
         <ul id="contacto">
-          <p>Contacto</p><br>
+          <p><strong class="pter">Contacto</strong></p><br>
           <li id="mail"><strong>Email:</strong> <a href="mailto:kevinglz@hotmail.com"> kevinglz@hotmail.com</a></li>
           <li id="whats"><strong>Teléfono: +52 1 871 334 4720</strong></li>
-          <li id="dire"><strong>Dirección:</strong> Fracc.Latinoamericano Blvd. México #1079</li>
+          <li id="dire"><strong>Dirección:</strong>Fracc.Latinoamericano Blvd.México#1079</li>
         </ul>
+
         <article id="Termin">
-          <p> <strong id="pter">Terminos</strong> <br><br>
+          <p> <strong class="pter">Terminos</strong> <br>
           Conoce nuestros terminos <br>y condiciones...</p>
         </article>
         <ul id="redes">
-          <p>Redes Sociales</p><br>
+          <p><strong class="pter">Redes Sociales</strong></p><br>
           <li id="face"><strong>Facebook:</strong> @Kevin Gonzalez Jaquez</li>
           <li id="insta"><strong>Instagram:</strong>@KevinJaquez</li>
           <li id="gma"><strong>Gmail:</strong> kevin.jaq@gmail.com</li>
         </ul>
         <article id="DER">
-          <p> <strong id="pter">Derechos</strong> <br><br>
+          <p> <strong class="pter">Derechos</strong> <br><br>
           @Copyright - 2017</p>
         </article>
       </section>
