--- a/CSS y diseñowebRes-Gonzalez Kevin/html/retratos.html
+++ b/CSS y diseñowebRes-Gonzalez Kevin/html/retratos.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <header>
-      <p id="titulo">Retratos</p>
+      <p class="titulo2">Retratos</p>
       <nav>
       <ul id="menu">
         <li><a href="../index.html"> Inicio</a></li>
         <li><a href="../html/paisaje.html">Paisajes</a></li>
-        <li class="activo"><a href="html/retratos.html">Retratos</a></li>
+        <li class="activo"><a href="retratos.html">Retratos</a></li>
       </ul>
       </nav>
     </header>
