--- a/CSS y diseñowebRes-Gonzalez Kevin/index.html
+++ b/CSS y diseñowebRes-Gonzalez Kevin/index.html
@@ -23,10 +23,16 @@
       </figure>
     </section>
     <section id="imgsecundaria">
-      <figure>
+      <article class="">
+      <figure class="fg">
         <img src="img/paisaje2.jpg" alt="paisajes">
-        <img src="img/retra.jpg" alt="retrato">
+        <figcaption><strong>Paisajes</strong></figcaption>
       </figure>
+        <figure class="fg">
+        <img src="img/retra.jpg" alt="retrato">
+        <figcaption><strong>Retratos</strong></figcaption>
+      </figure>
+    </article>
     </section>
     <footer>
       <section id="footer">
