--- a/CSS y diseñowebRes-Gonzalez Kevin/html/paisaje.html
+++ b/CSS y diseñowebRes-Gonzalez Kevin/html/paisaje.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <header>
-      <p id="titulo">Paisajes</p>
+      <p class="titulo2">Paisajes</p>
       <nav>
       <ul id="menu">
         <li><a href="../index.html"> Inicio</a></li>
-        <li class="activo"><a href="../html/paisaje.html">Paisajes</a></li>
+        <li class="activo"><a href="paisaje.html">Paisajes</a></li>
         <li><a href="../html/retratos.html">Retratos</a></li>
       </ul>
       </nav>
